==> MS71/ROS2Mower/esp32/ros2node/components/vl53l1x/VL53L1X.cpp <==
#define LOG_LOCAL_LEVEL ESP_LOG_INFO
#include "esp_log.h"
#include "freertos/FreeRTOS.h"
#include "freertos/task.h"
#include <VL53L1X.h>
#include <driver/gpio.h>
#include <driver/i2c.h>
#include <stdbool.h>
#include <stdint.h>
#include <stdio.h>
#include <string.h>
#define I2C_TIMEOUT 10
#define ESP_ERROR_CHECK_NONFATAL(expr, retexpr)                                  \
    {                                                                            \
        esp_err_t __err_rc = (expr);                                             \
        if(__err_rc != ESP_OK) {                                                 \
            ESP_LOGE(__FUNCTION__, "%s != ESP_OK, result: %d", #expr, __err_rc); \
            retexpr;                                                             \
        }                                                                        \
    }

void VL53L1X::writeReg(uint16_t reg, uint8_t value)
{
    i2c_cmd_handle_t CommandHandle = NULL;

    ESP_LOGI(TAG, "writeReg16Bit(%04x,%02x) ...", reg, value);

    if((CommandHandle = i2c_cmd_link_create()) != NULL) {
        ESP_ERROR_CHECK_NONFATAL(i2c_master_start(CommandHandle), last_status = 4; return );
        ESP_ERROR_CHECK_NONFATAL(
            i2c_master_write_byte(CommandHandle, (address << 1) | I2C_MASTER_WRITE, true), last_status = 2; return );
        ESP_ERROR_CHECK_NONFATAL(i2c_master_write_byte(CommandHandle, ((reg >> 8) & 0xFF), true), last_status = 3;
                                 return );
        ESP_ERROR_CHECK_NONFATAL(i2c_master_write_byte(CommandHandle, ((reg >> 0) & 0xFF), true), last_status = 3;
                                 return );
        ESP_ERROR_CHECK_NONFATAL(i2c_master_write_byte(CommandHandle, ((value >> 0) & 0xFF), true), last_status = 3;
                                 return );
        ESP_ERROR_CHECK_NONFATAL(i2c_master_stop(CommandHandle), last_status = 4; return );
        if(ESP_OK == i2c_master_cmd_begin((i2c_port_t)I2CPortNumber, CommandHandle, pdMS_TO_TICKS(I2C_TIMEOUT))) {
            ESP_LOGI(TAG, "writeReg16Bit(%04x,%02x) ... ok", reg, value);
        } else {
            last_status = 3;
        }
        i2c_cmd_link_delete(CommandHandle);
    }
}

void VL53L1X::writeReg16Bit(uint16_t reg, uint16_t value)
{
    i2c_cmd_handle_t CommandHandle = NULL;

    ESP_LOGI(TAG, "writeReg16Bit(%04x,%04x) ...", reg, value);

    if((CommandHandle = i2c_cmd_link_create()) != NULL) {
        ESP_ERROR_CHECK_NONFATAL(i2c_master_start(CommandHandle), last_status = 4; return );
        ESP_ERROR_CHECK_NONFATAL(
            i2c_master_write_byte(CommandHandle, (address << 1) | I2C_MASTER_WRITE, true), last_status = 2; return );
        ESP_ERROR_CHECK_NONFATAL(i2c_master_write_byte(CommandHandle, ((reg >> 8) & 0xFF), true), last_status = 3;
                                 return );
        ESP_ERROR_CHECK_NONFATAL(i2c_master_write_byte(CommandHandle, ((reg >> 0) & 0xFF), true), last_status = 3;
                                 return );
        ESP_ERROR_CHECK_NONFATAL(i2c_master_write_byte(CommandHandle, ((value >> 8) & 0xFF), true), last_status = 3;
                                 return );
        ESP_ERROR_CHECK_NONFATAL(i2c_master_write_byte(CommandHandle, ((value >> 0) & 0xFF), true), last_status = 3;
                                 return );
        ESP_ERROR_CHECK_NONFATAL(i2c_master_stop(CommandHandle), last_status = 4; return );
        if(ESP_OK == i2c_master_cmd_begin((i2c_port_t)I2CPortNumber, CommandHandle, pdMS_TO_TICKS(I2C_TIMEOUT))) {
            ESP_LOGI(TAG, "writeReg16Bit(%04x,%04x) ... ok", reg, value);
        } else {
            last_status = 3;
        }
        i2c_cmd_link_delete(CommandHandle);
    }
}

void VL53L1X::writeReg32Bit(uint16_t reg, uint32_t value)
{
    i2c_cmd_handle_t CommandHandle = NULL;

    ESP_LOGI(TAG, "writeReg32Bit(%04x,%08x) ...", reg, value);

    if((CommandHandle = i2c_cmd_link_create()) != NULL) {
        ESP_ERROR_CHECK_NONFATAL(i2c_master_start(CommandHandle), last_status = 4; return );
        ESP_ERROR_CHECK_NONFATAL(
            i2c_master_write_byte(CommandHandle, (address << 1) | I2C_MASTER_WRITE, true), last_status = 2; return );
        ESP_ERROR_CHECK_NONFATAL(i2c_master_write_byte(CommandHandle, ((reg >> 8) & 0xFF), true), last_status = 3;
                                 return );
        ESP_ERROR_CHECK_NONFATAL(i2c_master_write_byte(CommandHandle, ((reg >> 0) & 0xFF), true), last_status = 3;
                                 return );
        ESP_ERROR_CHECK_NONFATAL(i2c_master_write_byte(CommandHandle, ((value >> 24) & 0xFF), true), last_status = 3;
                                 return );
        ESP_ERROR_CHECK_NONFATAL(i2c_master_write_byte(CommandHandle, ((value >> 16) & 0xFF), true), last_status = 3;
                                 return );
        ESP_ERROR_CHECK_NONFATAL(i2c_master_write_byte(CommandHandle, ((value >> 8) & 0xFF), true), last_status = 3;
                                 return );
        ESP_ERROR_CHECK_NONFATAL(i2c_master_write_byte(CommandHandle, ((value >> 0) & 0xFF), true), last_status = 3;
                                 return );
        ESP_ERROR_CHECK_NONFATAL(i2c_master_stop(CommandHandle), last_status = 4; return );
        if(ESP_OK == i2c_master_cmd_begin((i2c_port_t)I2CPortNumber, CommandHandle, pdMS_TO_TICKS(I2C_TIMEOUT))) {
            ESP_LOGI(TAG, "writeReg32Bit(%04x,%08x) ... ok", reg, value);
        } else {
            last_status = 3;
        }
        i2c_cmd_link_delete(CommandHandle);
    }
}

uint8_t VL53L1X::readReg(regAddr reg)
{
    uint8_t buf[1];
    if(read(reg, sizeof(buf), buf, pdMS_TO_TICKS(I2C_TIMEOUT)) == sizeof(buf)) {
        ESP_LOGI(TAG, "readReg(reg=%02x) => %02x", reg, buf[0]);
        return buf[0];
    }
    return 0;
}

uint16_t VL53L1X::readReg16Bit(uint16_t reg)
{
    uint8_t buf[2];
    if(read(reg, sizeof(buf), buf, pdMS_TO_TICKS(I2C_TIMEOUT)) == sizeof(buf)) {
        ESP_LOGI(TAG, "readReg16Bit(reg=%02x) => %04x", reg, (buf[0] << 8) | (buf[1] << 0));
        return (buf[0] << 8) | (buf[1] << 0);
    }
    return 0;
}

uint32_t VL53L1X::readReg32Bit(uint16_t reg)
{
    uint8_t buf[4];
    if(read(reg, sizeof(buf), buf, pdMS_TO_TICKS(I2C_TIMEOUT)) == sizeof(buf)) {
        ESP_LOGI(TAG, "readReg32Bit(reg=%02x) => %04x", reg,
            (buf[0] << 24) | (buf[1] << 16) | (buf[2] << 8) | (buf[3] << 0));
        return (buf[0] << 24) | (buf[1] << 16) | (buf[2] << 8) | (buf[3] << 0);
    }
    return 0;
}

void VL53L1X::readResults()
{
    //i2c_cmd_handle_t CommandHandle = NULL;

    ESP_LOGI(TAG, "readResults() ...");

    uint8_t tmp[19];
    if(read(RESULT__RANGE_STATUS, sizeof(tmp), tmp, pdMS_TO_TICKS(I2C_TIMEOUT)) == sizeof(tmp)) {
        int j = 0;

        ESP_LOGI(TAG,
            "readResults() %02x%02x%02x%02x%02x%02x%02x%02x%02x%02x%02x%02x%02x%02x%02x%02x%02x%02x%02x ... done",
            tmp[0], tmp[1], tmp[2], tmp[3], tmp[4], tmp[5], tmp[6], tmp[7], tmp[8], tmp[9], tmp[10], tmp[11], tmp[12],
            tmp[13], tmp[14], tmp[15], tmp[16], tmp[17], tmp[18]);

        results.range_status = tmp[j++] << 0;

        j++; // report_status: not used

        results.stream_count = tmp[j++] << 0;

        results.dss_actual_effective_spads_sd0 = (uint16_t)tmp[j++] << 8; // high byte
        results.dss_actual_effective_spads_sd0 |= tmp[j++];               // low byte

        j++; // peak_signal_count_rate_mcps_sd0: not used
        j++;

        results.ambient_count_rate_mcps_sd0 = (uint16_t)tmp[j++] << 8; // high byte
        results.ambient_count_rate_mcps_sd0 |= tmp[j++];               // low byte

        j++; // sigma_sd0: not used
        j++;

        j++; // phase_sd0: not used
        j++;

        results.final_crosstalk_corrected_range_mm_sd0 = (uint16_t)tmp[j++] << 8; // high byte
        results.final_crosstalk_corrected_range_mm_sd0 |= tmp[j++];               // low byte

        results.peak_signal_count_rate_crosstalk_corrected_mcps_sd0 = (uint16_t)tmp[j++] << 8; // high byte
        results.peak_signal_count_rate_crosstalk_corrected_mcps_sd0 |= tmp[j++];               // low byte
    } else {
        ESP_LOGE(TAG, "readResults() ... error");
    }
}
